--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
+    "react": "^16.0.0",
     "react-dom": "^16.4.1",
     "react-redux": "^4.4.9",
+    "react-router": "^3.0.0",
     "react-scripts": "1.1.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6"
